# ml-nids-testbed

./: .gitignore  .notes.txt  .pdm-python  README.md  pyproject.toml
src/: controller.py  main.py
src/agent/: agent.py
src/agent/utils/: cpustopwatch.py  log.py  sysmon_pb2.py  sysmon_pb2_grpc.py  sysmonitor.py
src/controller/: main.py
src/controller/utils/: pcap.py  sysmon.proto  sysmon_pb2_grpc.py  sysmonitor.py
src/lib/: sysmon.proto  sysmon_pb2_grpc.py
src/ml_nids_testbed/: main.py
src/ml_nids_testbed/enums/: port_status.py  protocol_type.py
src/ml_nids_testbed/methods/: boil_the_frog.py  carpet_bomb.py  smuggler.py
src/ml_nids_testbed/programs/: adjust_delay.py  mix_pcap.py
src/ml_nids_testbed/utils/: cli.py  fabricate.py  generate_packet.py  generate_pcap.py  log.py  mix_pcap,py  ntpstopwatch.py  packets.py  pcap.py  scan_ports.py
src/programs/agent/: agent.py
src/programs/controller/: main.py
src/utils/agent/: log.py  sysmonitor.py
src/utils/cli/: main.py  runas.py
src/utils/controller/: packetgenerator.py  signal.py  stats.py  sysmonitor.py
