[project]
name = "ml-nids-testbed"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dawetmaster", email = "andika.naufal48@gmail.com"},
]
dependencies = [
    "scapy>=2.5.0",
    "ntplib>=0.4.0",
    "grpcio>=1.64.1",
    "grpcio-tools>=1.64.1",
    "protobuf>=5.27.0",
    "psutil>=5.9.8",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.scripts]
server = "python src/agent/agent.py"
